# dst-airlines

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_clean.txt  setup.py
.github/workflows/: ci_workflows.yml
99_old_struct/gestion_projet/: 00_enonce.md  01_cadrage.md  02_sources.md
99_old_struct/outils_code/: lufthansa_api_references_data.py  weather_daily.py
Airflow/clean_data/: DecisionTreeRegressor_model.pickle  yDecisionTreeRegressor().csv
airflow/: docker-compose.yaml  docker-compose.yaml-old
airflow_dag/: dag_prepare_airports_data.py  dag_prepare_flights_weather_data.py
crontab_scripts/: .cache.sqlite  feed_csv_to_mysql.py  feed_csv_to_mysql.sh  feed_mongodb_flights.py  feed_mongodb_flights.sh  fra_departing_flights.py  fra_departing_flights.sh  references_data_lufthanza.sh  weather_from_flights.py  weather_from_flights.sh
databases_compose/: docker-compose.yaml  init.sql  script_creation_database.sh  test.sh
docker-compose/: DST_Airlines.sql  create_dst_airlines_database.sql  create_dst_airlines_users.sql  docker-compose.yaml  init.sql  script_creation_database.sh
dst_airlines/: API-requests.py  __init__.py  config.py  plots.py  utils.py
env/: private_template.env  public.env
fastapi/: Dockerfile  prediction_api.py  requirements.txt  run_fastapi_locally.sh
kubernetes/: deploy.sh  onfermeboutique.sh  uninstall.sh
notebooks/: gl_departing_flights_analysis.ipynb  gl_test.ipynb
outils_code/: auto_ETL_spark.py  automatisation_ETL.py  req_API_to_csv.py
(+98 files in other folders)
