[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dst_airlines"
version = "0.0.1"
description = "Predict airplane flight delays based on data collected from Lufthansa API among else"
authors = [
  { name = "Bruno OLIVEIRA, Gil LAMPE \u0026 Matthieu SERRANO" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["dst_airlines"]
force_sort_within_sections = true
